$Id: History,v 1.17 2001-02-22 11:18:07 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N04 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
February 25 2001 S.W.O'Neale (exampleN04-V03-00-06)
- Add exampleN04.EMtest.large_N.out reference output and remove
  some empty "reference" .err files

February 20 2001 S.W.O'Neale (exampleN04-V03-00-05)
- Update reference outputs following materials-V03-00-04  

February 9 2001 S.W.O'Neale (exampleN04-V03-00-04)
- Update SUN CC reference outouts for test104 and test104.EMtest

February 9 2001 H.Kurashige (exampleN04-V03-00-03)
- Introduce Modular Physics List

25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for min.delta energy cut
- Update test outputs for small"ish" changes from em tags

August 18, 2000  Michel Maire  
- standard G4ionIonisation removed from the PhysicsList

June 24, 2000  John Allison  (exampleN04-V01-01-03)
- Updated exampleN04*.out for stand-V01-01-05 and utils-V01-01-03.

June 19, 2000  John Allison  (exampleN04-V01-01-02)
- Updated exampleN04.out for geant4-01-01-cand-07.

June 17, 2000  John Allison  (exampleN04-V01-01-01)
- Updated exampleN04*.out for geant4-01-01-ref-06.

9th June 2000  Makoto Asai  (exampleN04-V01-01-00)
- ExN04StackingAction.cc: protection against illegal value of an argument.

5th June 1999  John Allison